<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_total">Bill Total</string>
    <string name="tip">Tip Amount</string>
    <string name="total">Total Amount</string>
    <string name="zero">0.00</string>
    <string name="round_zero">0</string>
    <string name="custom">Custom</string>
    <string name="noOfPeople">No. of People</string>
    <string name="perPerson">Each Person Pays</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="tip_percentage">Tip %</string>
    <string name="roundLabel">Round Total</string>


    <!--Menu options-->
    <string name="viewTip">View Tips</string>
    <string name="tipPreference">Tip% Preference</string>
    <string name="saveTip">Save Tip</string>
    <string name="shareApp">Share</string>
    <string name="rateApp">Rate App</string>

    <!--save tip-->

    <string name="placeLabel">Place</string>
    <string name="dateLabel">Date</string>
    <string name="dateHint">mm/yy/dd</string>
    <string name="pickDateLabel">Pick Date</string>
    <string name="ethnicLabel">Ethnic</string>
    <string name="cityLabel">City</string>
    <string name="stateLabel">State</string>
    <string name="billAmountLabel">Bill Amount</string>
    <string name="tipAmountLabel">Tip Amount</string>
    <string name="totalAmountLabel">Total Amount</string>
    <string name="save">Save</string>

    <!-- Add to save screen menu options-->
    <string name="addEthnic">Add Ethnic</string>
    <string name="addCity">Add City</string>
    <string name="addState">Add State</string>
    <string name="addPlace">Add Place</string>


    <!--Save Alert Dialog -->
    <string name="placeTitle">Place name is required</string>
    <string name="placeMessage">You must enter the place name</string>
    <string name="dateTitle">Date is required</string>
    <string name="dateMessage">You must select the date</string>

    <string name="tipPrefTitle">Set Default Tip Preferences</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="datafilterShow">Show</string>

</resources>
