<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:layout_marginTop="30dp"
        android:id="@+id/mainGridLayoutId"
        android:paddingLeft="40dp"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_total"
            android:id="@+id/billTextView"
            android:layout_gravity="right"
            android:layout_column="0"
            android:gravity="center_horizontal"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billEditText"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:ems="7"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noOfPeople"
            android:id="@+id/noOfPeopleLabelTextView"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:layout_gravity="right|center_vertical"
            android:layout_column="0"
            />
    <SeekBar
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/noOfPeopleSeekBar"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:progress="0"
            android:max="20"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noOfPeopleTextView"
            android:text="0"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_vertical"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_percentage"
            android:id="@+id/customTextView"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
             />
    <SeekBar
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:progress="15"
            android:max="100"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customTipTextView"
            android:text="15%"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center_vertical"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:id="@+id/finalTipTextView"
            android:paddingRight="5dp"
            android:layout_column="0"
            android:layout_gravity="right"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/finalTipEditText"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:editable="false"
            android:ems="7"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/finalTotalTextView"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_column="0"
            android:layout_gravity="right"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finalTotalEditText"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:gravity="center"
            android:focusable="false"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:editable="false"
            android:ems="7"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perPerson"
            android:id="@+id/perPersonTextView"
            android:paddingRight="5dp"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_column="0"
            android:layout_gravity="right"/>
    <EditText
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/perPersonEditText"
            android:gravity="center"
            android:textSize="14sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:editable="false"
            android:ems="7"/>
</GridLayout>