<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/billAmountLabel"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_weight="1"
            android:paddingRight="20dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataFilterBillAmountTV"
            android:layout_gravity="center"
            android:gravity="left"
            android:paddingLeft="20dp"
            tools:text="1000"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipAmountLabel"
            android:layout_gravity="center"
            android:gravity="right"
            android:paddingRight="20dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataFilterTipAmountTV"
            android:layout_gravity="center"
            android:gravity="left"
            android:paddingLeft="20dp"
            tools:text="1000"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalAmountLabel"
            android:layout_gravity="center"
            android:gravity="right"
            android:paddingRight="20dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataFilterFinalAmountTV"
            android:layout_gravity="center"
            android:gravity="left"
            android:paddingLeft="20dp"
            tools:text="1000"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>